--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -1,7 +1,8 @@
 nav {
   width: 100%;
   padding-bottom: 10px;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid black;
+  background: white;
 
   img {
     margin-top: 20px;
@@ -18,7 +19,7 @@ nav {
     float: right;
 
     a {
-      color: white;
+      color: black;
       font-weight: 600;
     }
 
@@ -48,6 +49,7 @@ nav {
 @media screen and (max-width: 1180px) {
   nav {
     border: none;
+    background: transparent;
 
     img {
       margin-top: 20px;
@@ -72,6 +74,10 @@ nav {
       li {
         font-size: 1.3em;
         font-weight: 600;
+
+        a {
+          color: white;
+        }
       }
     }
 
