--- a/style/_about.scss
+++ b/style/_about.scss
@@ -209,3 +209,79 @@
     width: 86%;
   }
 }
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.popup_modal {
+  display: none;
+  background: white;
+  width: 50%;
+  margin: auto;
+  padding: 50px 30px 10px 30px;
+  border-radius: 10px;
+
+  .grid {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 1fr 1fr;
+
+    .bold {
+      margin-bottom: 5px;
+    }
+
+    .thin {
+      margin-top: 20px;
+    }
+
+    .image {
+      img {
+        height: auto;
+        width: 100%;
+      }
+    }
+  }
+
+  .close_btn {
+    margin-top: 80px;
+    text-align: center;
+
+    .close_popup {
+      padding: 10px 30px;
+      background: #40ba7b;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-family: "Roboto", sans-serif;
+      font-size: 1em;
+      font-weight: 600;
+    }
+  }
+}
+
+@media screen and (max-width: 1220px) {
+  .popup {
+    .popup_modal {
+      width: 80%;
+    }
+  }
+}
+
+.popup.show {
+  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup_modal.show {
+  display: block;
+}
