--- a/style/main.css
+++ b/style/main.css
@@ -388,6 +388,10 @@
   padding-left: 30px;
 }
 
+.latest_news.team .news .cards .card .sm_heading {
+  font-size: 1.3em;
+}
+
 .latest_news.team .news .cards .card .bold {
   margin-bottom: 10px;
   padding-left: 30px;
@@ -503,7 +507,7 @@
   right: 0;
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow: auto;
   background: rgba(0, 0, 0, 0.5);
 }
 
@@ -514,6 +518,7 @@
   margin: auto;
   padding: 50px 30px 10px 30px;
   border-radius: 10px;
+  overflow: auto;
 }
 
 .popup_modal .grid {
@@ -526,6 +531,10 @@
 
 .popup_modal .grid .bold {
   margin-bottom: 5px;
+}
+
+.popup_modal .grid .sm_heading {
+  font-size: 1.3em;
 }
 
 .popup_modal .grid .thin {
@@ -570,6 +579,9 @@
   .popup .popup_modal .grid .image {
     width: 200px;
     height: 200px;
+  }
+  .popup .popup_modal .close_btn {
+    margin-top: 30px;
   }
 }
 
