--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -1,8 +1,12 @@
 nav {
   width: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
   padding-bottom: 10px;
   border-bottom: 1px solid black;
   background: white;
+  z-index: 1;
 
   img {
     margin-top: 20px;
@@ -50,6 +54,7 @@ nav {
   nav {
     border: none;
     background: transparent;
+    position: static;
 
     img {
       margin-top: 20px;
