--- a/style/main.scss
+++ b/style/main.scss
@@ -40,6 +40,7 @@ body {
     border: none;
     background-color: $accent-color;
     color: white;
+    z-index: -1;
 
     .btn_text {
       position: relative;
@@ -58,6 +59,7 @@ body {
     margin-bottom: 10px;
     border: 1px solid black;
     background-color: #ffffff;
+    z-index: -1;
 
     .btn_text {
       position: relative;
@@ -147,194 +149,21 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-
-    /* Navbar container */
-    .nav-items {
-      overflow: hidden;
-      margin-left: auto;
-      margin-top: 40px;
-      margin-right: 20px;
-
-      /* Links inside the navbar */
-      a {
-        float: left;
-        font-size: 16px;
-        color: white;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-      }
-
-      /* The dropdown container */
-      .dropdown {
-        float: left;
-        overflow: hidden;
-
-        button {
-          background: transparent;
-          box-shadow: none;
-          border: none;
-        }
-
-        button:hover {
-          border-bottom: 3px solid $accent-color;
-          padding-bottom: 15px;
-        }
-        /* Dropdown button */
-        // .dropbtn {
-        //   font-size: 16px;
-        //   border: none;
-        //   outline: none;
-        //   color: white;
-        //   padding: 14px 16px;
-        //   background-color: inherit;
-        //   font-family: inherit; /* Important for vertical align on mobile phones */
-        //   margin: 0; /* Important for vertical align on mobile phones */
-
-        //   a {
-        //     position: static;
-        //   }
-        // }
-      }
-
-      /* Show the dropdown menu on hover */
-      .dropdown:hover .dropdown-content {
-        display: block;
-      }
-
-      /* Dropdown content (hidden by default) */
-      .dropdown-content {
-        display: none;
-        position: absolute;
-        margin-top: 2px;
-        background-color: #016937;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        z-index: 1;
-
-        a {
-          float: none;
-          color: white;
-          padding: 12px 16px;
-          text-decoration: none;
-          display: block;
-          text-align: left;
-        }
-
-        a:hover {
-          background-color: #016937;
-        }
-      }
-      .dropdown-content a:hover {
-        background-color: $accent-color;
-      }
-    }
-
-    // nav {
-    //   // display: flex;
-    //   // border-bottom: 1px solid white;
-    //   .logo {
-    //     margin: 15px 0px 5px 10px;
-    //   }
-    //   .logo.show {
-    //     display: none;
-    //   }
-
-    //   .icon {
-    //     display: none;
-    //   }
-    // }
-
-    // .nav-items.responsive {
-    //   display: none;
-    //   transition: all 5s ease-in-out;
-    // }
-
-    // @media screen and (max-width: 1172px) {
-    //   nav {
-    //     border: none;
-
-    //     .icon {
-    //       display: block;
-    //       position: absolute;
-    //       top: 10px;
-    //       right: 10px;
-    //       cursor: pointer;
-    //     }
-
-    //     .iconify-inline.hamburger {
-    //       background: transparent;
-    //     }
-    //   }
-    //   .nav-items {
-    //     display: none;
-    //   }
-
-    //   .nav-items.responsive {
-    //     display: block;
-    //     width: 40vw;
-    //     border-radius: 20px;
-    //     height: 90vh;
-    //     top: 50px;
-    //     right: 50px;
-    //     background-color: #016937;
-    //     transition: all 1s ease-in-out;
-    //   }
-
-    //   .nav-items.responsive a {
-    //     float: none;
-    //     display: block;
-    //     text-align: left;
-    //     border-bottom: 1px solid black;
-    //   }
-    //   .nav-items.responsive .dropdown {
-    //     float: none;
-    //   }
-    //   .nav-items.responsive .dropdown-content {
-    //     position: relative;
-    //     margin-left: 20px;
-    //   }
-    //   .nav-items.responsive .dropdown .dropbtn {
-    //     display: block;
-    //     width: 100%;
-    //     text-align: left;
-    //   }
-    // }
-
-    // @media screen and (max-width: 716px) {
-    //   nav {
-    //     img {
-    //       width: 100px;
-    //       height: 50px;
-    //     }
-    //   }
-
-    //   .nav-items.responsive {
-    //     display: block;
-    //     width: 80vw;
-    //     border-radius: 20px;
-    //     height: 90vh;
-    //     top: 50px;
-    //     right: 50px;
-    //     transition: all 1s ease-in-out;
-    //   }
-    // }
   }
 
   .landing_page {
     width: 78%;
-    height: 70vh;
+    height: 100vh;
     margin: auto;
     color: #ffffff;
-    display: flex;
+    display: flex !important;
     flex-direction: column;
     justify-content: center;
-    // margin-top: 70px;
 
     .heading {
       font-size: 4em;
       font-weight: 800;
-      margin-top: -4px;
+
       // justify-self: flex-end;
     }
 
@@ -342,6 +171,12 @@ body {
       width: 70%;
       line-height: 25px;
       margin-bottom: 20px;
+    }
+  }
+
+  @media (max-width: 1180px) {
+    .landing_page {
+      height: 80vh;
     }
   }
 
@@ -599,7 +434,7 @@ body {
 
       input {
         font-family: "Roboto";
-        padding: 10px;
+        padding: 10px 20px 10px 0;
         border: none;
         background: $accent-color;
         color: white;
