--- a/style/main.css
+++ b/style/main.css
@@ -824,8 +824,7 @@
 }
 
 .header.greenstart {
-  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.1))), url(../images/yoebg.png) center center scroll no-repeat;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1)), url(../images/yoebg.png) center center scroll no-repeat;
+  background: url(../images/yoebg.png) center center scroll no-repeat;
   background-size: fill;
 }
 
