--- a/style/main.scss
+++ b/style/main.scss
@@ -307,7 +307,7 @@ body {
   }
 
   .latest_news {
-    background: url(../images/Layer1.png) no-repeat right top;
+    // background: url(../images/Layer1.png) no-repeat right top;
     margin: auto;
     padding-bottom: 50px;
 
